feat: add recommender system for SPLC
