# static/swagger.yml
@@ -517,3 +517,78 @@ paths:
                     type: string
       tags:
         - Validate
+
+  /api/v1/recommendations/:
+    post:
+      summary: Recommend products based on a query
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                model:
+                  type: string
+                  format: binary
+                products:
+                  type: string
+                  format: binary
+                query:
+                  type: string
+                  format: binary
+              required:
+                - model
+                - products
+                - query
+      responses:
+        '200':
+          description: Recommendations are valid
+        '404':
+          description: Recommendations are not valid
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+      tags:
+        - Recommendations
+  /api/v1/recommendations/validate:
+      post:
+        summary: Check validity of recommendation objects
+        requestBody:
+          required: true
+          content:
+            multipart/form-data:
+              schema:
+                type: object
+                properties:
+                  model:
+                    type: string
+                    format: binary
+                  products:
+                    type: string
+                    format: binary
+                  query:
+                    type: string
+                    format: binary
+                required:
+                  - model
+                  - products
+                  - query
+        responses:
+          '200':
+            description: Objects are valid
+          '404':
+            description: Objects are not valid
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    error:
+                      type: string
+        tags:
+          - Recommendations
